--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -5,7 +5,7 @@
 
 1.    Import files
 2.    Header
-3.   
+3.    Banner
 4.   
 5    
 6.   
@@ -16,21 +16,25 @@
 ******************************/
 
 //Import files
-@import 'base';
-@import 'variable';
-@import 'mixin';
-
-
+@import "base";
+@import "variable";
+@import "mixin";
 
 /*==========================
 // start  header 
 ===========================*/
 
 /*==========================
-// start   
+// start   banner
 ===========================*/
 
+.single-banner {
+   @include background-content();
+   height: 100vh;
+   display: flex;
+   align-items: center;
+}
 
-
-
-
+.product-item {
+   margin: 0 20px;
+}
